[tool.poetry]
name = "sb_oper"
version = "0.1.0"
description = "The feature that show last 5 executed operations"
authors = ["IgorK78 <i.kolegov78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
